--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-babel": "^7.0.0",
     "gulp-postcss": "^7.0.0",
     "gulp-pug": "^3.3.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1"
   }
 }
